2006-10-10  Akim Demaille  <demaille@gostai.com>

	console.
	* console.cc: New.
	* Makefile.am: Compile it.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	Hook liburbi to SUBDIRS.
	* Makefile.am (liburbi-ci): New .

2006-10-10  Akim Demaille  <demaille@gostai.com>

	Install fwd.hh.
	* Makefile.am: Do it.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	Use liburbi as an svn:externals.
	* configure.ac: Configure the subpackage liburbi-c++.
	* uobject/uobject.h, uobject/uext.h, uobject/common_uvalue.cc:
	Point to the local version of liburbi-c++.
	* Makefile.am (liburbi-up): New.
	To be used to upgrade the version of liburbi used.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	fwd.hh.
	* fwd.hh: New.
	* unamedparameters.h, uvalue.h, ucommand.h, uexpression.h,
	* utypes.h, ucommandqueue.h, ugroup.h, ughostconnection.h,
	* ueventhandler.h, uvariablelist.h, ufunction.h,
	* uconnection.h, ubinder.h, userver.cc, userver.h, uobj.h,
	* uvariable.h, uvariablename.h, ucallid.h:
	Use it.
	* Makefile.am: Adjust.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	uobject.cc in urbi::.
	* uobject/uobject.cc:  Define in urbi:: the entities declared in it.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	uparse.cc.
	* parser/uparser.cc: New.
	* parser/uparser.h, Makefile.am: Adjust.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	* network/bsdnet/network.h, network/bsdnet/network.cc, 
	* uconnection.cc, ucommand.cc: Formatting changes.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	pin baux.
	* Makefile.am: And include build-aux.mk.

2006-10-08  JC Baillie  <baillie@gostai.com>

	first stage of object arrays (can create) 

The goal is be able to do things like:

myobj[1] = new stuff;
myobj[1].val = 4;

For the moment, only the first stage is possible with this commit.
To reach the second stage (which requires a modification of the grammar), you
can do this:

myobj__1.val = 4; //or
$("myobj__"+string(index)+".val") = 4;

